--- a/NLP_by_Deep_Learning/NLP_by_DL_3.ipynb
+++ b/NLP_by_Deep_Learning/NLP_by_DL_3.ipynb
@@ -658,7 +658,180 @@
    "metadata": {},
    "source": [
     "---\n",
-    "#### 系列変換モデルのパラメータ数\n"
+    "#### 系列変換モデルのパラメータ数\n",
+    "仮に $D=200, H=500, |\\mathcal{V}^{(s)}|=20,000, |\\mathcal{V}^{(t)}|=10,000$ とする。  \n",
+    "このとき各パラメータ数と合計は\n",
+    "\n",
+    "|parameter|calculation|number of parameters|\n",
+    "|:--|:--|:--|\n",
+    "|$\\mathbf{E}^{(s)}$|$D \\times |\\mathcal{V}^{(s)}|$|4,000,000|\n",
+    "|$\\mathbf{W}^{(s)}$|$H \\times (H+D)$|350,000|\n",
+    "|$\\mathbf{b}^{(s)}$|$H$|500|\n",
+    "|$\\mathbf{E}^{(t)}$|$D \\times |\\mathcal{V}^{(t)}|$|2,000,000|\n",
+    "|$\\mathbf{W}^{(t)}$|$H \\times (H+D)$|350,000|\n",
+    "|$\\mathbf{b}^{(t)}$|$H$|500|\n",
+    "|$\\mathbf{W}^{(o)}$|$H \\times |\\mathcal{V}^{(t)}|$|5,000,000|\n",
+    "||||\n",
+    "|Sum||11,701,000|\n",
+    "\n",
+    "語彙数や隠れ層の次元数は大きなものを使うことが多く、パラメータ数が億の単位に乗ることも普通である。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### 確率モデルの学習法\n",
+    "系列変換モデル $P_{\\theta}(\\mathbf{Y}|\\mathbf{X})$ の学習のために損失関数を定義する。  \n",
+    "これは条件付き再帰ニューラル言語モデルの一種とみなせば、負の対数尤度を損失関数とすることができる。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\hat{\\mathbf{\\theta}} &= \\operatorname{argmin}_{\\theta} \\{ \\Phi (\\theta,\\mathcal{D}) \\} \\\\\n",
+    "\\Phi(\\theta,\\mathcal{D}) &= - \\sum_{(\\mathbf{X},\\mathbf{Y})\\in\\mathcal{D}} \\log P_{\\theta}(\\mathbf{Y},\\mathbf{X})\n",
+    "\\end{align*}\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### 系列生成方法：ビーム探索／貪欲法\n",
+    "学習済みの系列変換モデルを用いて、ある入力文 $\\mathbf{X}$ に対して最良の出力文 $\\hat{\\mathbf{Y}}$ を生成する。  \n",
+    "$\\mathcal{Y}(\\mathbf{X})$ を入力 $\\mathbf{X}$ に対して可能なすべての出力 $\\mathbf{Y}$ の集合とするとき、式は次の通り。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\hat{\\mathbf{Y}} = \\operatorname{argmax}_{\\mathbf{Y} \\in \\mathcal{Y}(\\mathbf{X})} P_{\\theta}(\\mathbf{Y}|\\mathbf{X})\n",
+    "\\end{align*}\n",
+    "\n",
+    "系列変換モデルでは出力分の長さに制約がないことから、$\\mathcal{Y}(\\mathbf{X})$ は無限集合となり、計算不能である。  \n",
+    "上式の近似解を求める手法として、貪欲法（greedy algorithm）およびビーム探索（beam search）がよく用いられる。\n",
+    "\n",
+    "\n",
+    "#### 貪欲法\n",
+    "実際に解きたい問題を任意の複数の部分問題に分割し、その部分問題の評価値が最も高い順番に逐次決定する方法である。  \n",
+    "系列変換モデルでは、復号化器において各 $j$ において単語を１つ選択する処理を部分問題として、  \n",
+    "各 $j$ において最適な $\\mathbf{y}_{j}$ を逐次選択する。\n",
+    "\n",
+    "\n",
+    "#### ビーム探索\n",
+    "貪欲方法と同様にここの部分問題を順番に解いていく方法であるが、  \n",
+    "各部分問題の評価値が最大のものを１つ選ぶ代わりに、事前に決めた上位 $K$ 個の候補を保持して処理を行う。  \n",
+    "\n",
+    "$S$を累積対数尤度、$\\hat{\\mathbf{Y}}$ を生成文、$\\mathbf{H}^{(t)}$ を復号化処理に必要な隠れ状態のリスト、  \n",
+    "$\\mathcal{Q}_{W}$ を優先度付きキューとする。  \n",
+    "このとき典型的な $K$ ベストビーム探索の擬似コードは次の通り。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{align*}\n",
+    "\\hline{}\n",
+    "Initialize: & S \\leftarrow 0 \\\\\n",
+    "& \\hat{\\mathbf{Y}} \\leftarrow \\text{'BOS'} \\\\\n",
+    "& \\mathbf{H}^{(t)} \\leftarrow \\mathbf{H}^{(s)} \\\\\n",
+    "1: & h \\leftarrow (S, \\hat{\\mathbf{Y}}, \\mathbf{H}^{(t)}) \\\\\n",
+    "2: & \\mathcal{Q}_{W} \\leftarrow \\operatorname{push}(\\mathcal{Q}_{new}, h) \\\\\n",
+    "3: & \\textbf{Repeat} \\\\\n",
+    "4: &\\hspace{8pt} \\textbf{For} \\hspace{4pt} k \\in \\{ 1, \\ldots, \\operatorname{size}(\\mathcal{Q}_{W})\\} \\hspace{4pt} \\textbf{do} \\\\\n",
+    "5: &\\hspace{16pt} h \\leftarrow \\mathcal{Q}_{W}[k] \\\\\n",
+    "6: &\\hspace{16pt} \\textbf{If} \\hspace{4pt} \\operatorname{isCSent}(h) \\\\\n",
+    "7: &\\hspace{24pt} \\mathbf{q}^{(k)} \\leftarrow \\mathbf{0} \\\\\n",
+    "8: &\\hspace{16pt} \\textbf{Else} \\\\\n",
+    "9: &\\hspace{24pt} \\mathbf{q}^{(k)} \\leftarrow \\operatorname{calcLL}(h) \\\\\n",
+    "10: &\\hspace{16pt} \\textbf{End_if} \\\\\n",
+    "11: &\\hspace{16pt} \\mathbf{s}^{(k)} \\leftarrow \\operatorname{calcScore}(\\mathbf{q}^{(k)}, h) \\\\\n",
+    "12: &\\hspace{8pt} \\textbf{End_For} \\\\\n",
+    "13: &\\hspace{8pt} C_{K} \\leftarrow \\operatorname{findKBest}(S_{j}, K) \\\\\n",
+    "14: &\\hspace{8pt} \\mathcal{Q}_{W} \\leftarrow \\operatorname{makeCand}(C_{K}) \\\\\n",
+    "15: & \\bf Until \\hspace{4pt} \\rm isALLCSent(\\mathcal{Q}_{W}) \\\\\n",
+    "Output: \\hspace{4pt} \\mathcal{Q}_{W} \\\\\n",
+    "\\hline{}\n",
+    "\\end{align*}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "まず時刻 $j-1$ で得られた $K$ ベスト解候補の中で、$k$ 番目の候補に対して、  \n",
+    "時刻 $j$ の処理を行うのに必要な情報を $(s_{k,j-1}, \\hat{\\mathbf{Y}}_{k,j-1}, \\mathbf{H}_{k,j-1}^{(t)})$ という情報の組で表す。  \n",
+    "ここで  \n",
+    "　$s_{k,j-1}$：時刻 $j-1$ での $k$ 番目の出力候補の累積対数尤度  \n",
+    "　$\\hat{\\mathbf{Y}}_{k,j-1}$：時刻 $j-1$ で $k$ 番目の出力候補の部分文  \n",
+    "　$\\mathbf{H}_{k,j-1}^{(t)}$：$k$ 番目の出力候補を使って時刻 $j$ の処理を行うのに必要な隠れ状態ベクトルのリスト\n",
+    "\n",
+    "次に、時刻 $j-1$ までの予測結果 $\\hat{\\mathbf{Y}}_{k,j-1}$ と $j-1$ の隠れ状態のリスト $\\mathbf{H}_{k,j-1}^{(t)}$ を使って  \n",
+    "時刻 $j$ の出力単語候補の対数尤度を計算する。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\mathbf{q}_{j}^{(k)} = \\log (\\operatorname{softmax}(\\mathbf{o}_{j}^{(k)}))\n",
+    "\\end{align*}\n",
+    "\n",
+    "この $\\mathbf{q}_{j}^{(k)}$ に $j-1$ までのスコア $s_{k,j-1}$ を加算して各単語の累積対数尤度を求める。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\mathbf{s}_{j}^{(k)} = \\mathbf{q}_{j}^{(k)} + s_{k,j-1} \\hspace{12pt} \\forall k \\in \\{ 1, \\ldots, K \\}\n",
+    "\\end{align*}\n",
+    "\n",
+    "時刻 $j-1$ で得られた $K$ 個の候補それぞれから得られた  \n",
+    "時刻 $j$ の累積対数尤度を表す行列 $\\mathbf{S}_{j} = \\{ \\mathbf{s}_{j}^{(k)} \\}_{k=1}^{K}$ の中から  \n",
+    "最もスコアの大きかった上位 $K$ 個の要素を抽出する。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\{ ( \\hat{k}, \\hat{m})_{k'} \\}_{k'=1}^{K} = \\operatorname{KBest}_{1 \\leq m \\leq |\\mathcal{V}^{(t)}|, 1 \\leq k \\leq K} (\\mathbf{S}_{j})\n",
+    "\\end{align*}\n",
+    "\n",
+    "個々の出力 $( \\hat{k}, \\hat{m})$ は $|\\mathcal{V}^{(t)}| \\times K$ 行列 $\\mathbf{S}_{j}$ の要素番号を表しており、  \n",
+    "単語番号 $m$ の単語が選択され、そのときの文脈が $j-1$ 番目の $k$ 番目の候補であることを表している。  \n",
+    "この情報に基づき、$(s_{k,j}, \\hat{\\mathbf{Y}}_{k,j}, \\mathbf{H}_{k,j}^{(t)})$ を選択された上位 $K$ 個分生成する。\n",
+    "\n",
+    "ビーム探索は貪欲法に比べ、局所的には最良でなくとも系列全体でみれば尤度をより高くするような  \n",
+    "出力候補を保持できるため、系列全体での最適な解を得やすくなる。  \n",
+    "一方で計算コストは $K$ 倍となる。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### 符号化と復号化の応用\n",
+    "系列変換モデルを利用した機械翻訳はニューラル翻訳（NMT）と呼ばれており、  \n",
+    "良好な翻訳精度が達成されている。  \n",
+    "\n",
+    "また、対話システムへの応用も知られている。\n",
+    "\n",
+    "系列として扱えるデータであれば文でなくとも扱えるため、  \n",
+    "例えば木構造を $S$ 式（S-expression）で扱う構文解析などの応用が可能である。  \n",
+    "入力文から $S$ 式のトークンの系列への変換として系列変換モデルを学習させると  \n",
+    "既存の構文解析手法に迫る精度が出ることが報告されている。\n",
+    "\n",
+    "画像を入力すると文を出力するように扱うことも可能で、説明文生成（image captioning）と呼ばれる。  \n",
+    "show-and-tell などの典型的なモデルでは CNN により画像を符号化し再帰ニューラルネットで復号化する。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### encoder-decoder model\n",
+    "seq2seq や符号化復号化モデル（encoder-decoder model）は\n",
+    "概念的には系列変換モデルと同じである。\n",
+    "\n",
+    "end-to-end 学習という呼び名もこれらと同一概念を指すために使われることがある。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----\n",
+    "次のnotebookへ続く。"
    ]
   }
  ],
