--- a/NLP_by_Deep_Learning/NLP_by_DL_4.ipynb
+++ b/NLP_by_Deep_Learning/NLP_by_DL_4.ipynb
@@ -113,7 +113,88 @@
     "\n",
     "$N$ 個の参照したい情報 $\\mathbf{Y} = \\{ \\mathbf{y}_{1}, \\ldots, \\mathbf{y}_{N}\\}$ があり、  \n",
     "確率変数 $X$ が $\\{1,\\ldots,N\\}$ の中から確率的に１つを選択するものとして  \n",
-    "この時の確率を $P(X=i) = a_{i}$ とおく。"
+    "この時の確率を $P(X=i) = a_{i}$ とおく。すなわち\n",
+    "\n",
+    "\\begin{align*}\n",
+    "P(X=i)=a_{i}\n",
+    "\\end{align*}\n",
+    "\n",
+    "である。$\\mathbf{Y}$ の中から $X$ を使って無作為に１つ選択された結果を\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\hat{\\mathbf{y}} = \\mathbf{y}X\n",
+    "\\end{align*}\n",
+    "\n",
+    "とする。\n",
+    "\n",
+    "ハード注意機構を利用した学習で目的関数 $f(\\hat{\\mathbf{y}})$ が計算されたとして、これを最小化する。  \n",
+    "$\\hat{\\mathbf{y}}$ および $f(\\hat{\\mathbf{y}})$ は確率的に振る舞うため、期待値 $\\mathbb{E}[f(\\hat{\\mathbf{y}})]$ を最小化の対象とする。  \n",
+    "期待値の微分は次の通り。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\nabla \\mathbb{E}[f(\\hat{\\mathbf{y}})] &= \\nabla \\sum_{x=1}^{N} f( \\mathbf{y}_{x}) a_{x} \\\\\n",
+    "&= \\sum_{x=1}^{N} \\nabla f(\\mathbf{y}_{x}) a_{x} + \\sum_{x=1}^{N} f(\\mathbf{y}_{x}) \\nabla a_{x} \\\\\n",
+    "&= \\mathbb{E}[\\nabla f(\\hat{\\mathbf{y}})] + \\sum_{x=1}^{N} f(\\mathbf{y}_{x}) \\nabla a_{x}\n",
+    "\\end{align*}\n",
+    "\n",
+    "いずれの項もすべての $x$ について計算することから計算の負荷が高く、近似が必要となる。  \n",
+    "第１項についてはモンテカルロ法を用いる、つまり有限個の標本で次のように近似する。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\mathbb{E}[\\nabla f(\\hat{\\mathbf{y}})] \\approx \\frac{1}{T}\\sum_{i=1}^{T} \\nabla f(\\mathbf{y}_{\\bar{x}_{i}})\n",
+    "\\end{align*}\n",
+    "\n",
+    "第２項についても変形すると期待値の式に変形できるので、モンテカルロ法が適用可能である。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\sum_{x=1}^{N} f (\\mathbf{y}_{x}) \\nabla a_{x} &= \\sum_{x=1}^{N} f(\\mathbf{y}_{x}) \\nabla a_{x} \\frac{a_{x}}{a_{x}} \\\\\n",
+    "&= \\mathbb{E} \\left[ f( \\hat{\\mathbf{y}} ) \\frac{\\nabla a_{x}}{a_{x}} \\right] \\\\\n",
+    "&= \\mathbb{E} [ f( \\hat{\\mathbf{y}}) \\nabla \\log a_{x}]\n",
+    "\\end{align*}\n",
+    "\n",
+    "以上により\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\nabla \\mathbb{E}[f(\\hat{\\mathbf{y}})] &= \\mathbb{E}[\\nabla f(\\hat{\\mathbf{y}}) + f( \\hat{\\mathbf{y}}) \\nabla \\log a_{x}] \\\\\n",
+    "&\\approx \\frac{1}{T}\\sum_{i=1}^{T} \\{ \\nabla f(\\mathbf{y}_{\\bar{x}_{i}}) + f(\\mathbf{y}_{\\bar{x}_{i}}) \\nabla \\log a_{\\bar{x}_{i}} \\}\n",
+    "\\end{align*}\n",
+    "\n",
+    "となる。\n",
+    "\n",
+    "なお実用上、標本から計算される $f( \\mathbf{y}_{\\bar{x}_{i}}) \\nabla \\log a_{\\bar{x}_{i}}$ の分散が大きい時に学習できないことがある。  \n",
+    "そこで分散を抑えることを考える。定数 $b$ を用いて\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\mathbb{e}[f( \\hat{\\mathbf{y}} ) \\nabla \\log a_{x}] &= \\mathbb{E}[(f( \\hat{\\mathbf{y}} ) -b ) \\nabla \\log a_{x}] + \\mathbb{E}[ b \\nabla \\log a_{x}] \\\\\n",
+    "&= \\mathbb{E}[(f( \\hat{\\mathbf{y}} ) -b ) \\nabla \\log a_{x}] + b \\mathbb{E}[\\nabla \\log a_{x}] \\\\\n",
+    "\\mathbb{E}[\\nabla \\log a_{x}] &= \\sum_{x=1}^{N} \\nabla a_{x} = \\nabla \\sum_{x}^{N} a_{x}\n",
+    "\\end{align*}\n",
+    "\n",
+    "と変形する。$a_{x}$ は確率値であるから、$ \\sum_{x=1}^{N}a_{x}=1, \\nabla \\sum_{x=1}^{N}a_{x}=0$ である。  \n",
+    "よって任意の定数 $b \\in \\mathbb{R}$ について\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\mathbb{E}[f( \\hat{\\mathbf{y}} ) \\nabla \\log a_{x}] = \\mathbb{E}[(f( \\hat{\\mathbf{y}} ) -b ) \\nabla \\log a_{x}]\n",
+    "\\end{align*}\n",
+    "\n",
+    "が成り立ち、この $b$ をベースラインと呼ぶ。  \n",
+    "ベースラインとしては $b=\\mathbb{E}[f( \\hat{\\mathbf{y}})]$ がよく用いられる。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "その他の注意機構としては、局所注意機構（local attention mechanism）などがある。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### 4.2　記憶ネットワーク"
    ]
   }
  ],
