--- a/NLP_by_Deep_Learning/NLP_by_DL_4.ipynb
+++ b/NLP_by_Deep_Learning/NLP_by_DL_4.ipynb
@@ -194,8 +194,104 @@
    "metadata": {},
    "source": [
     "---\n",
-    "### 4.2　記憶ネットワーク"
+    "### 4.2　記憶ネットワーク\n",
+    "記憶ネットワーク（memory networks）は、記憶したい事例の書き込み・読み込み操作をモデル化したものである。"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### 記憶ネットワークのモデル\n",
+    "記憶ネットワークは $N$ 個の記憶情報 $\\mathbf{M} = (\\mathbf{m}_{i=1}^{N})$ を列として持ち、  \n",
+    "内部構造は $I,G,O,R$ ４つの部品に分けてモデル化されている。\n",
+    " - Input feature map：入力情報変換、入力された情報を内部表現に変換する\n",
+    " - Genelarization：一般化、新しい情報により内部の記憶情報を更新する\n",
+    " - Output feature map：出力情報変換、外からの質問に対し記憶情報を利用して返答のための内部表現を生成する\n",
+    " - Response：応答、出力情報を文など適切な返答に変換する\n",
+    " \n",
+    "これらは符号化復号化モデルに記憶を取り扱う部分を追加したものと見なすことができる。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### 教師あり記憶ネットワーク\n",
+    "最も簡単な状況について考察するため、記憶情報・入力・返答に加えて  \n",
+    "返答生成のためにどの記憶情報を利用すべきかという根拠情報（supporting fact）が揃っていることを仮定する。\n",
+    "\n",
+    "このようなモデルは、根拠情報を与えることを明示するために強教師あり記憶ネットワークとも呼ばれる。\n",
+    "\n",
+    "いま、入力が単語列、出力（返答）が単語であるシステムを考え、  \n",
+    "入力は $D$ 次元ベクトルの内部情報に変換され、記憶情報の各要素は $\\mathbf{m}_{i} \\in \\mathbb{R}^{D}$ とする。\n",
+    "\n",
+    "入力情報変換処理は埋め込みベクトルの和の形への変換とする。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "I(\\mathbf{x}) = \\sum \\mathbf{Ex}\n",
+    "\\end{align*}\n",
+    "\n",
+    "一般化処理は次の通り。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\mathbf{m}_{N} \\leftarrow \\mathbf{x}\n",
+    "\\end{align*}\n",
+    "\n",
+    "出力情報変換について考える。  \n",
+    "返答するのに必要な情報か否かを判定するスコア関数があるとして、これを $s_{O}$ で表す。  \n",
+    "入力 $\\mathbf{x} \\in \\mathbb{R}^{D}$ に対してスコア上位 $\\kappa$ を記憶 $\\mathbf{M}$ から探す。  \n",
+    "ここでは $\\kappa = 2$ として\n",
+    "\n",
+    "\\begin{align*}\n",
+    "o_{1} = O_{1}(\\mathbf{x}, \\mathbf{M}) &= \\operatorname{argmax}_{i=1, \\ldots, N} s_{O} (\\mathbf{x}, \\mathbf{m}_{i}) \\\\\n",
+    "o_{2} = O_{2}(\\mathbf{x}, \\mathbf{M}) &= \\operatorname{argmax}_{i=1, \\ldots, N} s_{O} ((\\mathbf{x}, \\mathbf{m}_{o_{1}}), \\mathbf{m}_{i})\n",
+    "\\end{align*}\n",
+    "\n",
+    "ただし $s_{O}$ は複数の文書を扱えるような第一引数をとれるものとする。  \n",
+    "\n",
+    "返答は $\\mathbf{x}, \\mathbf{m}_{1}, \\mathbf{m}_{2}$ の３つの情報から生成する。  \n",
+    "ここでは問題設定より単語を１つ答えるので、語彙集合 $\\mathcal{V}$ の中からスコア $s_{R}$ が最大となる単語を探す。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "r = \\operatorname{argmax}_{w \\in \\mathcal{V}} s_{r} ((\\mathbf{x}, \\mathbf{m}_{o_{1}}, \\mathbf{m}_{o_{2}}),w)\n",
+    "\\end{align*}\n",
+    "\n",
+    "２つのスコア関数 $s_{O}, s_{R}$ は、パラメータ $\\mathbf{U} \\in R_{N \\times D}$ を用いて次の形式で表せる。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "s(\\mathbf{x}, \\mathbf{y}) = \\Phi^{(x)}(\\mathbf{x})^{\\mathrm{T}}\\mathbf{U}^{\\mathrm{T}}\\mathbf{U} \\Phi^{(y)}(\\mathbf{y})\n",
+    "\\end{align*}\n",
+    "\n",
+    "ここで $\\Phi$ は入力情報を $D$ 次元ベクトルの特徴ベクトルに変換する関数であり、  \n",
+    "種々の方法があるが、最も単純なものは単語の埋め込みベクトルの和である。  \n",
+    "実装時には $s_{O},s_{R}$ で異なるパラメータを用い、$\\mathbf{x},\\mathbf{m}_{o_{1}},\\mathbf{m}_{o_{2}}$ のそれぞれに対し別の埋め込みベクトルを用いる。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "最大値を取るべき候補が $o_{1}^{*}, o{2}^{*},r^{*}$ として与えられたものとする。  \n",
+    "学習時は、以下の式を最小化する。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\sum_{o \\in \\{ 1, \\ldots, N \\} \\backslash \\{ o_{1}^{*} \\} } &\\max (0, \\gamma - s_{O}(\\mathbf{x}, \\mathbf{m}_{o_{1}^{*}}) + s_{O}(\\mathbf{x},\\mathbf{m}_{O})) \\\\\n",
+    "+ \\sum_{o \\in \\{ 1, \\ldots, N \\} \\backslash \\{ o_{1}^{*} \\} } &\\max (0, \\gamma - s_{O}((\\mathbf{x}, \\mathbf{m}_{o_{1}^{*}}),\\mathbf{m}_{o_{2}^{*}}) + s_{O}((\\mathbf{x}, \\mathbf{m}_{o_{1}^{*}}),\\mathbf{m}_{o})) \\\\\n",
+    "+ \\sum_{o \\in \\mathcal{V} \\backslash \\{ r^{*} \\} } &\\max (0, \\gamma - s_{O}((\\mathbf{x}, \\mathbf{m}_{o_{1}^{*}},\\mathbf{m}_{o_{2}^{*}}),r^{*}) + s_{O}((\\mathbf{x}, \\mathbf{m}_{o_{1}^{*}},\\mathbf{m}_{o_{2}^{*}}),r))\n",
+    "\\end{align*}\n",
+    "\n",
+    "このようなネットワーク用のタスクセットとしては、例えばbAbIタスクがある。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
