--- a/NLP_by_Deep_Learning/NLP_by_DL_4.ipynb
+++ b/NLP_by_Deep_Learning/NLP_by_DL_4.ipynb
@@ -287,11 +287,62 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "---\n",
+    "#### end-to-end 記憶ネットワーク\n",
+    "現実的な質疑応答タスクでは、  \n",
+    "先の教師あり記憶ネットワークで用いたような「どの記憶を参照するか」という中間的な部分課題の解が  \n",
+    "明示的に得られず、訓練データに含めることが不可能な場合が多い。  \n",
+    "\n",
+    "記憶ネットワークの全ての部品を微分可能な関数として記述し  \n",
+    "中間的な部分課題の解を用いずに一気に学習させる手法を end-to-end 記憶ネットワークと呼ぶ。  \n",
+    "ここでは根拠情報の代わりに注意機構を利用して情報を引き出すこととする。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "入力情報変換では、入力文 $\\mathbf{x}_{i}$ を $D \\times |\\mathcal{V}|$ の埋め込み行列 $\\mathbf{A} \\in \\mathbb{R}^{D \\times \\mathcal{V}}$ を使って、次の単一ベクトル $\\mathbf{m}_{i}$ に符号化する。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\mathbf{m}_{i} = \\sum_{j} \\mathbf{Ax}_{ij}\n",
+    "\\end{align*}\n",
+    "\n",
+    "同様に、質問文 $q$ を $D \\times |\\mathcal{V}|$ の埋め込み行列 $\\mathbf{B} \\in \\mathbb{R}^{D \\times \\mathcal{V}}$ を使って、次の単一ベクトル $\\mathbf{u}$ に符号化する。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\mathbf{u} = \\sum_{j} \\mathbf{Bq}_{j}\n",
+    "\\end{align*}\n",
+    "\n",
+    "記憶情報の参照では、  \n",
+    "まず $N$ 個の記憶情報 $\\{ \\mathbf{m}_{1}, \\ldots, \\mathbf{m}_{N}\\}$ のそれぞれに対して、$\\mathbf{u}$ にとっての重要度 $\\{ p_{1}, \\ldots, p_{N}\\}$ を計算する。  \n",
+    "これは内積のソフトマックスにより、次式の通り。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "p_{i} = \\frac{\\exp ( \\mathbf{u} \\cdot \\mathbf{m}_{i})}{\\sum_{j=1}^{N} \\exp ( \\mathbf{u} \\cdot \\mathbf{m}_{j})}\n",
+    "\\end{align*}\n",
+    "\n",
+    "回答に利用する出力の情報では、  \n",
+    "次の式によって出力情報 $\\mathbf{c}_{i}$ をつくり、全体の出力情報 $\\mathbf{o} \\in \\mathbb{R}^{D}$ を求める。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\mathbf{c}_{i} &= \\sum_{j} \\mathbf{C} \\mathbf{x}_{ij} \\\\\n",
+    "\\mathbf{o} &= \\sum_{i=1}^{N} p_{i} \\mathbf{c}_{i}\n",
+    "\\end{align*}\n",
+    "\n",
+    "最後に $\\mathbf{u}$ と $\\mathbf{o}$、$|\\mathcal{V}| \\times D$ 行列 $\\mathbf{W} \\in \\mathbb{R}^{|\\mathcal{V} \\times D}$ を用いて各返答単語に対するスコアを計算し、全体で１になるよう正規化する。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\hat{\\mathbf{a}} = \\operatorname{softmax} ( \\mathbf{W}(\\mathbf{o} + \\mathbf{u}))\n",
+    "\\end{align*}\n",
+    "\n",
+    "以上の処理は微分可能な関数のみで構成されているので、  \n",
+    "訓練データが入力情報 $\\{ \\mathbf{x}_{i} \\} _{i=1}^{N}$、質問文 $\\mathbf{q}$、正しい返答 $a$ を含んでいれば  \n",
+    "$"
+   ]
   }
  ],
  "metadata": {
