--- a/NLP_by_Deep_Learning/NLP_by_DL_4.ipynb
+++ b/NLP_by_Deep_Learning/NLP_by_DL_4.ipynb
@@ -341,7 +341,32 @@
     "\n",
     "以上の処理は微分可能な関数のみで構成されているので、  \n",
     "訓練データが入力情報 $\\{ \\mathbf{x}_{i} \\} _{i=1}^{N}$、質問文 $\\mathbf{q}$、正しい返答 $a$ を含んでいれば  \n",
-    "$"
+    "$a$ と $\\hat{\\mathbf{a}}$ の交差エントロピーを損失として end-to-end の最適化が可能である。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### 動的記憶ネットワーク （dynamic memory networks; DMN）\n",
+    "DMNは記憶ネットワークの一種で、必要な知識を繰り返し問い合わせるエピソード記憶モジュールが特徴的であり、  \n",
+    "これは複数の知識を組み合わせる、知識を用いた推論機構のモデル化である。\n",
+    "\n",
+    "動的記憶ネットワークは次の５つのモジュールからなる。\n",
+    " - input module：入力、外部からの情報を内部表現に変換する\n",
+    " - semantic memory module：意味記憶、一般的な知識や常識を格納する\n",
+    " - question module：質問を内部表現に変換する\n",
+    " - episodic memory module：エピソード記憶、入力された知識を記憶して質問に応じて情報を引き出す\n",
+    " - answer module：回答、エピソード記憶による回答の内部表現から返答のための表現を生成する"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### 4.3　出力層の高速化"
    ]
   }
  ],
