--- a/NLP_by_Deep_Learning/NLP_by_DL_4.ipynb
+++ b/NLP_by_Deep_Learning/NLP_by_DL_4.ipynb
@@ -366,7 +366,197 @@
    "metadata": {},
    "source": [
     "---\n",
-    "### 4.3　出力層の高速化"
+    "### 4.3　出力層の高速化\n",
+    "自然言語処理における多くの手法では交差エントロピー損失関数を利用する。  \n",
+    "この損失関数はソフトマックス関数の計算を含むが、全語彙集合に対する計算であることから計算負荷が非常に高い。  \n",
+    "そこで、ソフトマックス関数の計算を効率化することを考える。\n",
+    "\n",
+    "入力情報 $\\mathbf{x}$ と予測対象 $y \\in \\mathcal{Y}$ に対して\n",
+    "\n",
+    "\\begin{align*}\n",
+    "l_{\\theta}^{\\text{sofmax}}(\\mathbf{x},y) = - \\log \\frac{\\exp(f_{\\theta}(\\mathbf{x},y))}{\\sum_{\\tilde{y} \\in \\mathcal{Y}} \\exp (f_{\\theta}(\\mathbf{x},\\tilde{y}))}\n",
+    "\\end{align*}\n",
+    "\n",
+    "で定義される交差エントロピー損失関数は、  \n",
+    "ソフトマックス関数により定義される確率分布の最尤推定を行っているとも解釈できる。  \n",
+    "すなわち\n",
+    "\n",
+    "\\begin{align*}\n",
+    "P(y|\\mathbf{x}) &= \\frac{\\exp(f_{\\theta}(\\mathbf{x},y))}{\\sum_{\\tilde{y} \\in \\mathcal{Y}} \\exp (f_{\\theta}(\\mathbf{x},\\tilde{y}))} \\\\\n",
+    "l_{\\theta}^{\\text{sofmax}}(\\mathbf{x},y) &= - \\log P(y|\\mathbf{x})\n",
+    "\\end{align*}\n",
+    "\n",
+    "とおくと、損失関数の最小化は対数尤度を最大化していると解釈できる。\n",
+    "\n",
+    "$\\mathbf{x}, \\theta$ を省略して\n",
+    "\n",
+    "\\begin{align*}\n",
+    "s(y) &= f_{\\theta}(\\mathbf{x},y) \\\\\n",
+    "Z(\\mathcal{Y}) &= \\sum_{\\tilde{y} \\in \\mathcal{Y}} \\exp (s(\\tilde{y}))\n",
+    "\\end{align*}\n",
+    "\n",
+    "とおくと\n",
+    "\n",
+    "\\begin{align*}\n",
+    "l_{\\theta}^{\\text{sofmax}}(\\mathbf{x},y) = - s(y) + \\log Z(\\mathcal{Y})\n",
+    "\\end{align*}\n",
+    "\n",
+    "と表すことができ、この $Z$ を分配関数（partition function）と呼ぶ。  \n",
+    "\n",
+    "最適化のため勾配を求める。  \n",
+    "$\\nabla s(\\cdot)$ を $s'(\\cdot)$ と書き、$Y$ を $p(\\cdot)$ を確率密度関数とする分布に従う確率変数とするとき\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\nabla l_{\\theta}^{\\text{sofmax}}(\\mathbf{x},y) &= - \\nabla s(y) + \\nabla \\log Z(\\mathcal{Y}) \\\\\n",
+    "\\nabla \\log Z(\\mathcal{Y}) &= \\sum_{\\tilde{y} \\in \\mathcal{Y}} \\frac{\\exp (s(\\tilde{y}))}{Z(\\mathcal{Y})} s'(\\tilde{y}) \\\\\n",
+    "&= \\sum_{\\tilde{y} \\in \\mathcal{Y}} p(\\tilde{y}) s'(\\tilde{y}) \\\\\n",
+    "&= \\mathbb{E}_{Y \\sim p} [ s'(Y)] \\\\\n",
+    "\\therefore \\, \\nabla l_{\\theta}^{\\text{sofmax}}(\\mathbf{x},y) &= - \\nabla s(y) + \\mathbb{E}_{p} [ s'(Y)]\n",
+    "\\end{align*}\n",
+    "\n",
+    "となる。  \n",
+    "ここで第２項の $\\mathbb{E}_{p} [ s'(Y)]$ が最も計算量を要する項である。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### 重点サンプリング （importance sampling）\n",
+    "　　（参考：[重点サンプリング(1) | 人工知能に関する断創録](http://aidiary.hatenablog.com/entry/20140920/1411207305) ）\n",
+    "\n",
+    "少数の標本を利用して $\\mathbb{E}_{p} [ s'(Y)]$ の近似計算を行うことを考える。\n",
+    "\n",
+    "$Y$ の分布 $p$ に従って独立に $T$ 個の標本 $\\{ \\bar{y}_{1}, \\ldots, \\bar{y}_{T}\\}$ を無作為抽出するとき、次のように近似できる。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\mathbb{E}[s'(Y)] \\approx \\frac{1}{T} \\sum_{i=1}^{T} s' (\\bar{y}_{i})\n",
+    "\\end{align*}\n",
+    "\n",
+    "上のようにモンテカルロ法を利用するには $p$ の分布から無作為抽出が効率よく行える必要があるが、  \n",
+    "単語の出現確率を求めるには分配関数 $Z$ を計算する必要があり、  \n",
+    "近似に必要な計算量が直接計算するのと同等になってしまう場合がある。\n",
+    "\n",
+    "このとき使われる手法の一つが重点サンプリングである。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "無作為抽出が容易な分布の確率密度関数 $q(\\cdot)$ があるとき、  \n",
+    "$q$ の分布に従う確率変数 $Y'$ の元での $s'(Y')p(Y')/q(Y')$ の期待値は  \n",
+    "$p$ の分布に従う $Y$ の元での $s'(Y)$ の期待値と一致する。  \n",
+    "\n",
+    "すなわち\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\mathbb{E}_{Y \\sim p} [ s'(Y)] = \\mathbb{E}_{Y' \\sim q} \\left[ s'(Y') \\frac{p(Y')}{q(Y')} \\right]\n",
+    "\\end{align*}\n",
+    "\n",
+    "が成り立つ。\n",
+    "\n",
+    "これは\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\mathbb{E}_{Y' \\sim q} \\left[ s'(Y') \\frac{p(Y')}{q(Y')} \\right] &= \\sum_{\\tilde{y} \\in \\mathcal{Y}}\n",
+    "s'(\\tilde{y}) \\frac{p(\\tilde{y})}{q(\\tilde{y})} q(\\tilde{y}) \\\\\n",
+    "&= \\sum_{\\tilde{y} \\in \\mathcal{Y}} s'(\\tilde{y}) p(\\tilde{y}) \\\\\n",
+    "&= \\mathbb{E}_{Y' \\sim q} [s'(Y)]\n",
+    "\\end{align*}\n",
+    "\n",
+    "として示される。この $q$ の分布を提案分布（proposal distribution）と呼ぶ。  \n",
+    "このとき、次のような近似がなされている。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\mathbb{E}_{p}[s'(Y)] \\approx \\frac{1}{T} \\sum_{i=1}^{T} s'(\\bar{y}_{i}) \\frac{p(\\bar{y}_{i})}{q(\\bar{y}_{i})}\n",
+    "\\end{align*}\n",
+    "\n",
+    "このように、元の確率分布とは異なる分布での標本を利用して期待値を近似計算する手法を重点サンプリングと呼ぶ。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "さて、$p(\\cdot)$ の計算には分配関数 $Z(\\mathcal{Y})$ の計算が必要で、これは語彙数に比例した計算量となる。  \n",
+    "よって $q$ からの標本に対する総和 $\\hat{Z}$ を利用して $Z$ を近似する。  \n",
+    "\n",
+    "語彙数を $|\\mathcal{Y}|$ としたときに、$u(x)=1/|\\mathcal{Y}|$ を確率密度関数とする一様分布を考える。  \n",
+    "この分布に従う確率変数 $X$ に対して\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\mathbb{E}_{X \\sim u} [ \\exp(s(X))] = \\sum_{\\tilde{x} \\in \\mathcal{V}} \\exp (s(\\tilde{x}))/|\\mathcal{V}|\n",
+    "\\end{align*}\n",
+    "\n",
+    "より\n",
+    "\n",
+    "\\begin{align*}\n",
+    "Z(\\mathcal{Y}) = |\\mathcal{V}| \\mathbb{E}_{u} [ \\exp(s(X))]\n",
+    "\\end{align*}\n",
+    "\n",
+    "と見なすことができる。\n",
+    "\n",
+    "ここで $Z(\\mathcal{Y})$ の近似値 $\\hat{Z}$ を $q$ の分布のもとで重点サンプリングして\n",
+    "\n",
+    "\\begin{align*}\n",
+    "Z(\\mathcal{Y}) &= |\\mathcal{Y}| \\mathbb{E}_{X \\sim u} [ \\exp(s(X))] \\\\\n",
+    "&= |\\mathcal{Y}| \\mathbb{E}_{X \\sim u} [ \\exp(s(Y')) \\frac{u(Y')}{q(Y')}] \\\\\n",
+    "&= \\mathbb{E}_{X \\sim u} [ \\frac{\\exp(s(Y'))}{q(Y')}] \\\\\n",
+    "&\\approx \\frac{1}{T} \\sum_{i=1}^{T} \\frac{\\exp (s(\\bar{y}_{i}))}{q(\\bar{y}_{i})} \\\\\n",
+    "&= \\hat{Z}\n",
+    "\\end{align*}\n",
+    "\n",
+    "とする。また\n",
+    "\n",
+    "\\begin{align*}\n",
+    "p(y) &= \\frac{\\exp (s(y))}{Z(\\mathcal{Y})} \\\\\n",
+    "&\\approx \\frac{\\exp (s(y))}{\\hat{Z}}\n",
+    "\\end{align*}\n",
+    "\n",
+    "で近似する。これらを使って\n",
+    "\n",
+    "\\begin{align*}\n",
+    "s'(y) \\frac{p(y)}{q(y)} &\\approx s'(y) \\frac{\\exp(s(y))/\\hat{Z} }{q(y)} \\\\\n",
+    "&= s'(y) \\frac{\\exp (s(y))/q(y)}{\\frac{1}{T} \\sum _{i=1}^{T} \\exp (s(\\bar{y}_{i})) / q(\\bar{y}_{i})}\n",
+    "\\end{align*}\n",
+    "\n",
+    "と近似する。  \n",
+    "この関数の分布 $q$ における期待値をモンテカルロ近似することで、元の関数の近似を得る。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\mathbb{E}_{p}[s'(Y)] &= \\mathbb{E}_{q} \\left[ s'(Y') \\frac{p(Y')}{q(Y')} \\right] \\\\\n",
+    "&\\approx \\frac{\n",
+    "\\sum_{i=1}^{T} s'(\\bar{y}_{i}) \\exp ( s(\\bar{y}_{i}))/q(\\bar{y}_{i})\n",
+    "}{\n",
+    "\\sum_{i=1}^{T} \\exp ( s(\\bar{y}_{i})) / q(\\bar{y}_{i})\n",
+    "}\n",
+    "\\end{align*}\n",
+    "\n",
+    "上式の $\\bar{y}_{i}$ は $q$ からの標本であり、$\\hat{Z}$ の計算のための標本と同じものである\n",
+    "\n",
+    "以上から\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\nabla l_{\\theta}^{\\text{sofmax}}(\\mathbf{x},y) &= - \\nabla s(y) + \\mathbb{E}_{p} [ s'(Y)] \\\\\n",
+    "&\\approx - \\nabla s(y) + \\frac{\n",
+    "\\sum_{i=1}^{T} s'(\\bar{y}_{i}) \\exp ( s(\\bar{y}_{i}))/q(\\bar{y}_{i})\n",
+    "}{\n",
+    "\\sum_{i=1}^{T} \\exp ( s(\\bar{y}_{i})) / q(\\bar{y}_{i})\n",
+    "}\n",
+    "\\end{align*}\n",
+    "\n",
+    "として勾配の近似を求めることができた。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### 雑音対照推定 （NCE）\n"
    ]
   }
  ],
