--- a/NLP_by_Deep_Learning/NLP_by_DL_4.ipynb
+++ b/NLP_by_Deep_Learning/NLP_by_DL_4.ipynb
@@ -556,7 +556,96 @@
    "metadata": {},
    "source": [
     "---\n",
-    "#### 雑音対照推定 （NCE）\n"
+    "#### 雑音対照推定 （noise contrastive estimation; NCE）\n",
+    "上記の重点サンプリングでは分配関数 $Z$ の近似によって計算量を削減したが、  \n",
+    "ここでは $Z$ を未知のパラメータとして学習することを考える。\n",
+    "\n",
+    "さて、新たにパラメータ $c$ をおいて $p(y)=\\exp (s(y)+c)$ かつ $\\sum p(y)=1$ であるように推定する。  \n",
+    "これは通常の最尤推定（負の対数尤度 $- \\log p(y)$ の最小化）によっては不可能であるが、  \n",
+    "雑音対照推定という手法により推定できることが知られている。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "雑音対照推定では、学習対照のデータとノイズ分布からの標本を識別するような分類器を考える。  \n",
+    "確率密度関数 $q(\\cdot)$ に従う分布から訓練データとは異なるノイズの標本を得るものとし、  \n",
+    "訓練データとノイズの標本は混ざって観測されるものとする。\n",
+    "\n",
+    "0または1をとる確率変数 $D$ が、訓練データのとき $D=1$ 、ノイズから抽出された標本であるとき $D=0$ とする。  \n",
+    "また、ノイズは訓練データよりも $k$ 倍出現しやすいと仮定する。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "P(D=1)=\\frac{1}{(k+1)}, \\, P(D=0)=\\frac{k}{(k+1)}\n",
+    "\\end{align*}\n",
+    "\n",
+    "このとき $D$ と $Y$ の同時確率は\n",
+    "\n",
+    "\\begin{align*}\n",
+    "P(D=1,Y=y) &= \\frac{1}{k+1} p(y) \\\\\n",
+    "P(D=0,Y=y) &= \\frac{k}{k+1} q(y)\n",
+    "\\end{align*}\n",
+    "\n",
+    "と書ける。  \n",
+    "従って、単語 $Y$ がノイズからの標本である確率は\n",
+    "\n",
+    "\\begin{align*}\n",
+    "P(D=0 \\, | \\, Y=y) &= \\frac{P(D=0,Y=y)}{P(Y=y)} \\\\\n",
+    "&= \\frac{\\frac{k}{k+1} q(y)}{\\frac{1}{k+1} p(y) + \\frac{k}{k+1} q(y)} \\\\\n",
+    "&= \\frac{kq(y)}{p(y) + kq(y)}\n",
+    "\\end{align*}\n",
+    "\n",
+    "となる。同様にして、訓練データである確率は\n",
+    "\n",
+    "\\begin{align*}\n",
+    "P(D=1 \\, | \\, Y=y) = \\frac{p(y)}{p(y) + kq(y)}\n",
+    "\\end{align*}\n",
+    "\n",
+    "となる。\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ここで１つの訓練データ $y$ に対して、ノイズ分布 $q$ から $k$ 個の標本 $\\bar{\\mathcal{D}} = \\{ \\bar{y}_{1}, \\ldots, \\bar{y}_{k} \\}$ を無作為抽出する。  \n",
+    "この $k+1$ 個の事例に対する $D$ の負の対数尤度 $l_{\\theta}^{NCE}(y)$ を最小化する。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "l_{\\theta}^{\\text{NCE}}(y) &= - \\log P(D=1|y) - \\sum_{\\bar{y} \\in \\bar{\\mathcal{D}}} \\log P(D=0|\\bar{y}) \\\\\n",
+    "&= - \\log \\frac{p(y)}{p(y) + kq(y)} - \\sum_{\\bar{y} \\in \\bar{\\mathcal{D}}} \\log \\frac{kq(\\bar{y})}{p(\\bar{y}) + kq(\\bar{y})}\n",
+    "\\end{align*}\n",
+    "\n",
+    "ここで、$\\theta$ は関数 $p$ のパラメータである。\n",
+    "\n",
+    "さて、NCEでは正規化パラメータ $c$ を導入して\n",
+    "\n",
+    "\\begin{align*}\n",
+    "p(y)&=\\frac{\\exp(s(y))}{Z(\\mathcal{Y})}\\\\\n",
+    "&=\\exp(s(y))\\exp(c)\n",
+    "\\end{align*}\n",
+    "\n",
+    "として学習するが、$Z(\\mathcal{Y})=1$ と仮定しても結果に大きな変化がないことが発見されている。\n",
+    "\n",
+    "よって $Z=1, p(y)=\\exp(s(y))$ と置き換えて\n",
+    "\n",
+    "\\begin{align*}\n",
+    "l_{\\theta}^{\\text{NCE}}(y) \\approx - \\log \\frac{\\exp(s(y))}{\\exp (s(y)) + kq(y)} - \\sum_{\\bar{y} \\in \\bar{\\mathcal{D}}} \\log \\frac{kq(\\bar{y})}{\\exp (s(\\bar{y})) + kq(\\bar{y})}\n",
+    "\\end{align*}\n",
+    "\n",
+    "を最小化すればよいことになる。\n",
+    "\n",
+    "NCE のこのような性質は自己正規化（self-normalization）と呼ばれる。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### 負例サンプリング"
    ]
   }
  ],
