--- a/NLP_by_Deep_Learning/NLP_by_DL_4.ipynb
+++ b/NLP_by_Deep_Learning/NLP_by_DL_4.ipynb
@@ -645,7 +645,26 @@
    "metadata": {},
    "source": [
     "---\n",
-    "#### 負例サンプリング"
+    "#### 負例サンプリング （negative sampling）\n",
+    "負例サンプリングは NCE を単純化させた手法である。  \n",
+    "NCE と同様に、１つの学習事例 $y$ ごとにランダムに生成した $k$ 個のノイズ $\\bar{\\mathcal{D}} = \\{ \\bar{y}_{1}, \\ldots, \\bar{y}_{k}\\}$ とを識別するように学習するが、  \n",
+    "識別にシグモイド関数を用いる。\n",
+    "\n",
+    "負例サンプリングの目的関数は次の通り。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "l_{\\theta}^{\\text{NS}} &= - \\log \\{ \\operatorname{sigmoid}(s(y))\\} - \\sum_{\\bar{y} \\in \\bar{\\mathcal{D}}} \\log \\{ 1 - \\operatorname{sigmoid}(s(\\bar{y}))\\} \\\\\n",
+    "&= - \\log \\frac{\\exp (s(y))}{\\exp (s(y)) + 1} - \\sum_{\\bar{y} \\in \\bar{\\mathcal{D}}} \\log \\frac{1}{\\exp (s(\\bar{y})) + 1}\n",
+    "\\end{align*}\n",
+    "\n",
+    "この目的関数はNCEの目的関数式において、  \n",
+    "$k=|\\mathcal{Y}|$ かつNCEの目的関数上のノイズが一様分布（ $q(y)=1/|\\mathcal{Y}|$ ）としたときの式とほぼ同様である。\n",
+    "\n",
+    "ノイズ分布 $q$ としては一様分布を使うのが単純である。\n",
+    "また、訓練データ中での各 $y$ の出現頻度に比例した分布も手軽に利用可能で、\n",
+    "この分布の確率はユニグラム確率と呼ばれる。\n",
+    "\n",
+    "ある文献では、ユニグラム確率の3/4乗ｗ"
    ]
   }
  ],
