--- a/NLP_by_Deep_Learning/NLP_by_DL_4.ipynb
+++ b/NLP_by_Deep_Learning/NLP_by_DL_4.ipynb
@@ -660,11 +660,92 @@
     "この目的関数はNCEの目的関数式において、  \n",
     "$k=|\\mathcal{Y}|$ かつNCEの目的関数上のノイズが一様分布（ $q(y)=1/|\\mathcal{Y}|$ ）としたときの式とほぼ同様である。\n",
     "\n",
-    "ノイズ分布 $q$ としては一様分布を使うのが単純である。\n",
-    "また、訓練データ中での各 $y$ の出現頻度に比例した分布も手軽に利用可能で、\n",
+    "ノイズ分布 $q$ としては一様分布を使うのが単純である。  \n",
+    "また、訓練データ中での各 $y$ の出現頻度に比例した分布も手軽に利用可能で、  \n",
     "この分布の確率はユニグラム確率と呼ばれる。\n",
     "\n",
-    "ある文献では、ユニグラム確率の3/4乗ｗ"
+    "ある文献では、ユニグラム確率の3/4乗を利用すると  \n",
+    "ユニグラム確率や一様分布に比べて有意に性能が向上するとの報告がある。\n",
+    "\n",
+    "負例サンプリングは実装の単純さと動作の軽さから単語分散表現の学習によく使われる。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### ブラックアウト （black-out）\n",
+    "NCE同様、最尤推定の代わりに $q$ から無作為抽出された $k$ 個のノイズ $\\bar{\\mathcal{D}} = \\{ \\bar{y}_{1}, \\ldots, \\bar{y}_{k}\\}$ を利用する。  \n",
+    "最小化する損失関数は次の通り。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "l_{\\theta}^{\\text{blackout}}(y) = - \\log \\tilde{p}(y) - \\sum_{\\bar{y} \\in \\bar{\\mathcal{D}}} \\log (1 - \\tilde{p}(\\bar{y}))\n",
+    "\\end{align*}\n",
+    "\n",
+    "ただし $\\bar{\\mathcal{D}}$ は $y$ を含まない。  \n",
+    "このとき、$1/q(\\cdot)$ で重み付けされたソフトマックス $\\tilde{p}$ を次のように定義する。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\tilde{p}(y) = \\frac{\\exp(s(y))/q(y)}{\\exp(s(y))/q(y) + \\sum_{\\bar{y} \\in \\bar{\\mathcal{D}}} \\exp (s(\\bar{y}))/q(\\bar{y})}\n",
+    "\\end{align*}\n",
+    "\n",
+    "負例サンプリングと同様、分布 $q(\\cdot)$ はユニグラム確率の $\\alpha$ 乗 $(\\alpha \\leq 1)$ を使うほうが良いという報告がある。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "さて、$\\bar{\\mathcal{D}}' = \\bar{\\mathcal{D}} \\cup \\{ y \\}$ とすると、$\\tilde{p}(y)$ の対数は\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\log \\tilde{p}(y) = s(y) - \\log(q(y)) - \\log \\left\\{ \\sum_{\\bar{y} \\in \\bar{\\mathcal{D}}'} \\frac{\\exp (s(\\bar{y}))}{q(\\bar{y})} \\right\\}\n",
+    "\\end{align*}\n",
+    "\n",
+    "となるので、これを $p$ のパラメータ $\\theta$ で微分すると\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\nabla \\log \\tilde{p}(y) &= \\nabla s(y) - \\nabla \\log \\sum_{\\bar{y} \\in \\bar{\\mathcal{D}}'} \\frac{\\exp (s(\\bar{y})) \\nabla s(\\bar{y})}{q(\\bar{y})} \\\\\n",
+    "&= \\nabla s(y) - \\frac{\\sum_{\\bar{y} \\in \\bar{\\mathcal{D}}'} q(\\bar{y}) \\exp (s(\\bar{y})) \\nabla s(\\bar{y}) / q(\\bar{y})}{\\sum_{\\bar{y} \\in \\bar{\\mathcal{D}}'} 1(\\bar{y}) \\exp (s(\\bar{y}))/q(\\bar{y})}\n",
+    "\\end{align*}\n",
+    "\n",
+    "となる。  \n",
+    "この重み付きソフトマックス $\\tilde{p}$ は、重点サンプリングによって近似計算された勾配を積分し  \n",
+    "確率値を復元した関数と見なすことができる。\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "また、ブラックアウトをNCEの一種と見なすこともできる。  \n",
+    "関数 $\\tilde{q}(y)$ を\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\tilde{q}(y) = \\frac{1}{k} \\sum_{\\bar{y} \\in \\bar{\\mathcal{D}}} \\frac{q(y)}{q(\\bar{y})} p(\\bar{y})\n",
+    "\\end{align*}\n",
+    "\n",
+    "とおき、NCEにおけるノイズ分布の確率密度関数に利用する。  \n",
+    "NCEにおける $D$ の事後確率分布に上の式を代入し、\n",
+    "\n",
+    "\\begin{align*}\n",
+    "P(D=1|y) &= \\frac{p(y)}{p(y)+k\\tilde{q}(y)} \\\\\n",
+    "&= \\frac{p(y)/q(y)}{p(y)/q(y) + \\sum_{\\bar{y} \\in \\bar{\\mathcal{D}}} p(\\bar{y})/q(\\bar{y})} \\\\\n",
+    "&= \\frac{\\exp(s(y))/q(y)}{\\exp(s(y))/q(y) + \\sum_{\\bar{y} \\in \\bar{\\mathcal{D}}} \\exp(s(\\bar{y}))/q(\\bar{y})}\n",
+    "\\end{align*}\n",
+    "\n",
+    "とすると、ブラックアウトの重み付きソフトマックス $\\tilde{p}$ に形が一致する。  \n",
+    "ただしノイズの標本 $\\bar{\\mathcal{D}}$ が、NCEのようにノイズ分布 $\\tilde{q}$ からの標本ではなく $q$ からの標本である点が異なる。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### 階層的ソフトマックス （hierarchical softmax; HSM）\n"
    ]
   }
  ],
