--- a/NLP_by_Deep_Learning/NLP_by_DL_4.ipynb
+++ b/NLP_by_Deep_Learning/NLP_by_DL_4.ipynb
@@ -745,7 +745,56 @@
    "metadata": {},
    "source": [
     "---\n",
-    "#### 階層的ソフトマックス （hierarchical softmax; HSM）\n"
+    "#### 階層的ソフトマックス （hierarchical softmax; HSM）\n",
+    "HSMは、$|\\mathcal{V}|$ 個のラベルを階層的な分類の連続とみなし、二値分類器を連続させる方法である。  \n",
+    "分類過程が木構造になるため、全語彙数の対数程度の回数で分類を行うことができ、  \n",
+    "計算効率を大きく向上させることができる。\n",
+    "\n",
+    "葉ノードの数が語彙数 $|\\mathcal{V}|$ 個となり、それぞれに単語が対応するような木が与えられ  \n",
+    "各ノードには一意のインデックスが割り振られているとする。  \n",
+    "また、簡単のため二分木に限定する。  \n",
+    "（木の構成法は単語の階層的クラスタリングのほか、出現頻度によるハフマン符号化なども用いられる。）\n",
+    "\n",
+    "二分木では葉ノード以外のノードは $|\\mathcal{V}| - 1$ 個あり、それぞれに２つの子ノードが存在する。  \n",
+    "ある語彙 $y$ が選択されたときの対応する葉ノードまでの経路を考え、  \n",
+    "この経路の長さを $L(y)$、経路上のノードの各インデックスを $(\\pi_{1}(y), \\ldots, \\pi_{L(y)}(y))$ とする。  \n",
+    "\n",
+    "階層的ソフトマックスはこのような木の上で、割り振られた符号による分類を繰り返すモデルである。  \n",
+    "各単語が確率的に選択されるとき、その確率は次のように各符号を選択する確率の積で表される。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "P(y) = \\prod_{j=1}^{L(y)} p(\\pi_{j}(y), b_{j}(y))\n",
+    "\\end{align*}\n",
+    "\n",
+    "ここで各ノード $\\pi_{j}(y)$ のビット値 $b_{j}(y)$ にロジスティック回帰モデルを適用する。  \n",
+    "各ノードに対応する特徴ベクトルを $f_{\\theta}(\\pi_{j}(y))$ とすると\n",
+    "\n",
+    "\\begin{align*}\n",
+    "p(\\pi_{j}(y), b_{j}(y)) &= \\operatorname{sigmoid}((2b_{j}(y) - 1) f_{\\theta} (\\pi_{j}(y))) \\\\\n",
+    "&= \\frac{1}{1+\\exp ((2b_{j}(y) - 1) f_{\\theta} ( \\pi_{j}(y)))}\n",
+    "\\end{align*}\n",
+    "\n",
+    "と書くことができる。  \n",
+    "この式は $\\{0,1\\}$ を選択する確率の積となっているので  \n",
+    "全ての単語に対して割り当てられた確率の総和 $\\sum_{y}P(y)$ は１となる。\n",
+    "\n",
+    "よって、各語彙をこの確率分布に従ってサンプリングするには  \n",
+    "木のノードに沿って確率的に $\\{0,1\\}$ の選択を繰り返せばよく、  \n",
+    "階層的ソフトマックスではこの負の対数尤度 $- \\log P(y)$ を最大化するように最適化する。\n",
+    "\n",
+    "階層的ソフトマックスでは経路上の各ノードのパラメータのみを利用し、経路長は $O(\\log | \\mathcal{V} |)$ である。  \n",
+    "よって１つの単語の出現に対する損失と勾配の時間計算量は $O(\\log | \\mathcal{V} |)$ で済む。\n",
+    "\n",
+    "ただし、予め木構造を与える必要があり、  \n",
+    "語彙による経路長の差から並列計算が複雑になることに注意が必要である。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "次のnotebookへ続く。"
    ]
   }
  ],
